modified the selectable questions and readme.md

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -22,5 +22,7 @@
         "placeholders": {
             "count": {}
         }
-    }
+    },
+    "nextQuestion": "Nächste Frage",
+    "lastQuestion": "Letzte Frage"
 }
