--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -24,5 +24,8 @@
         }
     },
     "nextQuestion": "Nächste Frage",
-    "lastQuestion": "Letzte Frage"
+    "lastQuestion": "Letzte Frage",
+    "helpCenterTitle": "Hilfezentrum",
+    "helpCenterMessage": "Du hast eine Frage oder ein Problem mit der App? Dann komm doch gerne auf unseren Discord Server und schreibe uns dein Anliegen.",
+    "helpCenterSubMessage": "Wir suchen außerdem noch Personen die auf einer freiwilligen basis das Projekt als Übersetzer und Konzeptionist unterstützen möchten."
 }
