worked on the settings ui

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -28,5 +28,7 @@
     "helpCenterTitle": "Help Center",
     "helpCenterMessage": "Do you have a question or a problem with the app? Then feel free to come to our Discord server and write us your request.",
     "helpCenterSubMessage": "We are also looking for people who would like to support the project on a voluntary basis as translators and conceptionists.",
-    "others": "Others"
+    "others": "Others",
+    "general": "GENERAL",
+    "app": "APP"
 }
