--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -28,5 +28,7 @@
     "helpCenterTitle": "Hilfezentrum",
     "helpCenterMessage": "Du hast eine Frage oder ein Problem mit der App? Dann komm doch gerne auf unseren Discord Server und schreibe uns dein Anliegen.",
     "helpCenterSubMessage": "Wir suchen außerdem noch Personen die auf einer freiwilligen basis das Projekt als Übersetzer und Konzeptionist unterstützen möchten.",
-    "others": "Sonstiges"
+    "others": "Sonstiges",
+    "general": "ALLGEMEIN",
+    "app": "APP"
 }
