Added a privacy policy url to the settings and fixed bugs

--- a/lib/l10n/app_de.arb
+++ b/lib/l10n/app_de.arb
@@ -30,5 +30,8 @@
     "helpCenterSubMessage": "Wir suchen außerdem noch Personen die auf einer freiwilligen basis das Projekt als Übersetzer und Konzeptionist unterstützen möchten.",
     "others": "Sonstiges",
     "general": "ALLGEMEIN",
-    "app": "APP"
+    "app": "APP",
+    "privacyPolicy": "Datenschutzrichtlinie",
+    "rateTheApp": "Bewerte die App",
+    "visitDiscord": "Besuche uns auf Discord"
 }
