--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -30,5 +30,8 @@
     "helpCenterSubMessage": "We are also looking for people who would like to support the project on a voluntary basis as translators and conceptionists.",
     "others": "Others",
     "general": "GENERAL",
-    "app": "APP"
+    "app": "APP",
+    "privacyPolicy": "Privacy Policy",
+    "rateTheApp": "Rate the app",
+    "visitDiscord": "Visit us on Discord"
 }
